# chess-engine

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  build.zig  build.zig.zon  config.json  engine.sh  llm-rules.md  pyproject.toml  pytest.ini  train.sh
benchmarks/: engine.sh  vs_stockfish.sh
chess-engine/qftu2qoi/checkpoints/: epoch=0-step=200.ckpt
docs/: index.md  lc0_data_format.md  model.md  training_data_format.md
engine/: engine.py  engine.sh  pyproject.toml
engine/engine/: engine.py
engine/engine/search/: __init__.py  trivial_net.py
engine/search/: __init__.py  trivial_net.py
engine/src/: main.zig  position.zig
engine/tests/: test_dummy.py  test_net.py
src/: main.zig  uci.zig
src/engine/: engine.py
src/engine/search/: __init__.py  neural_net.py  trivial_net.py  uct.py  util.py
src/preprocessing/: downloader.py  lc0_data_explorer.py  lc0_to_npz.py  npz_explorer.py
src/training/: data_module.py  flops_logger.py  model.py  train.py
src/training/benchmarks/: data_loader.py  train_speed.py
src/training/configs/: debug.yaml  nano.yaml  pico.yaml
src/training/experiment_logs/batch_size/debug/: hparams.yaml  metrics.csv
src/training/experiment_logs/batch_size/pico/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_0/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_1/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_10/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_11/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_12/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_13/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_14/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_15/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_16/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_17/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_18/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_19/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_2/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_20/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_21/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_22/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_23/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_24/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_25/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_26/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_27/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_28/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_29/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_3/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_4/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_5/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_6/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_7/: hparams.yaml  metrics.csv
src/training/experiment_logs/learning_rate/debug_8/: hparams.yaml  metrics.csv
src/training/experiments/: batch_size.py  learning_rate copy.py  learning_rate.py  optuna_migrate.py  steps.py  tune.py  tune_autoretry.sh  tune_parallel.sh  tune_results.py  utils.py
src/training/experiments/__marimo__/: learning_rate.html  steps.html
src/training/experiments/old/: steps.py
src/training/experiments/tune_ladder/: run.py  run.sh
src/training/experiments/tune_multiobjective/: results.py  run.py  run.sh
src/training/lc0/: chunkparser.py  policy_index.py  shufflebuffer.py
tests/: test_engine.py  test_net.py  test_preprocessing.py
training/: pyproject.toml  train.sh
training/experiments/: learning_rate.py
training/src/: data_module.py  model.py  train.py
training/training/: data_module.py  model.py  train.py
training/training/configs/: pico.yaml
training/training/lc0/: chunkparser.py
(+128 files in other folders)
