[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Maxence Frenette <maxence.frenette@gmail.com>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "training", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
lightning = "^2.4.0"
numpy = "^2.0.1"
wandb = "^0.19.1"
python-dotenv = "^1.0.1"
marimo = "^0.11.4"
altair = "^5.5.0"
pandas = "^2.2.3"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
